fix: optimize map size on small screen.

--- a/css/styles.css
+++ b/css/styles.css
@@ -192,9 +192,7 @@ nav h1 a {
   background: blue none repeat scroll 0 0;
   height: 87%;
   position: fixed;
-  right: 0;
-  top: 80px;
-  width: 50%;
+  width: 100%;
 }
 .inside #map {
   background-color: #ccc;
